--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: python
+sudo: required
 python:
   - "2.7"
   - "3.2"
   - "3.3"
   - "3.4"
 install:
-  - pip install --user matplotlib
+  - sudo apt-get install python-matplotlib
 script:
   - tests/PID.py
   - tests/feedForward.py
