--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
 install:
   - sudo apt-get install python-matplotlib
   - sudo apt-get install python-psutil
+  - export MPLBACKEND="agg"
 script:
   - tests/PID.py
   - tests/feedForward.py
