--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ python:
   - "3.2"
   - "3.3"
   - "3.4"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 install:
   - sudo apt-get install python-matplotlib
   - sudo apt-get install python-psutil
-  - export MPLBACKEND="agg"
 script:
   - tests/PID.py
   - tests/feedForward.py
