--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 install:
   - sudo apt-get install python-matplotlib
   - sudo apt-get install python-psutil
+  - sudo apt-get install python-twisted
 script:
   - tests/PID.py
   - tests/feedForward.py
