--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 language: python
-sudo: required
 python:
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
+  - "3.6"
+  - "3.6-dev"
+  - "3.7-dev"
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 install:
-  - sudo apt-get install python-matplotlib
-  - sudo apt-get install python-psutil
-  - sudo apt-get install python-twisted
+  - pip install -r requirements.txt
 script:
   - tests/PID.py
   - tests/feedForward.py
