--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ before_script:
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 install:
-  - sudo apt-get install python-matplotlib
-  - sudo apt-get install python-psutil
-  - sudo apt-get install python-twisted
+  -  pip install -r requirements.txt
 script:
   - tests/PID.py
   - tests/feedForward.py
