Add tox to automate testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,17 @@
 [flake8]
 max-line-length = 110
-exclude = .git,__pycache__,.pytest_cache,docs/source/conf.py,old,build,dist,venv*
+exclude = .git,__pycache__,.pytest_cache,.tox,docs,old,build,dist,venv*,*.egg-info
 max-complexity = 8
+
+# content of: tox.ini , put in same dir as setup.py
+[tox]
+envlist = py27,py38
+
+[testenv]
+deps =
+    pytest
+    mock
+    flake8
+commands =
+    flake8
+    pytest
