Fix issues with CI config.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ max-complexity = 8
 
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py38
+envlist = py27, py35, py36, py37, py38
 
 [testenv]
 deps =
