Add pytest coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 110
-exclude = .git,__pycache__,.pytest_cache,.tox,docs,old,build,dist,venv*,*.egg-info
+exclude = .git*,__pycache__,.pytest_cache,.tox,docs,old,build,dist,venv*,*.egg-info
 max-complexity = 8
 
 # content of: tox.ini , put in same dir as setup.py
@@ -10,8 +10,10 @@ envlist = py27, py35, py36, py37, py38
 [testenv]
 deps =
     pytest
+    pytest-cov
     mock
     flake8
 commands =
     flake8
-    pytest
+    pytest --cov=cpu_load_generator --cov-report=term
+    coverage report --fail-under=80
