Add pytest coverage

--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,11 @@ max-complexity = 8
 
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27, py35, py36, py37, py38
+envlist = py27, py38, py39
 
 [testenv]
-deps =
-    pytest
-    pytest-cov
-    mock
-    flake8
+deps = -r{toxinidir}/requirements-test.txt
 commands =
     flake8
-    pytest --cov=cpu_load_generator --cov-report=term
+    pytest --cov={envsitepackagesdir}/cpu_load_generator --cov-report=term --verbose
     coverage report --fail-under=80
