--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     strategy:
       matrix:
-        python-version: ["2.7", "3.2", "3.3", "3.4"]
+        python-version: ["2.7", "3.3", "3.4"]
 
     env:
       DISPLAY: ":99.0"
