--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       DISPLAY: ":99.0"
 
     steps:
-      - name: Check out the repository
+      - name: Check out repository
         uses: actions/checkout@v3
         
       - name: Set up Python ${{ matrix.python-version }}
