--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,13 @@ jobs:
     
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9"]
+        python-version: ["3.7", "3.8", "3.9"]
 
     env:
       DISPLAY: ":99.0"
 
     steps:
-      - name: Check out repository
+      - name: Check out the repository
         uses: actions/checkout@v3
         
       - name: Set up Python ${{ matrix.python-version }}
@@ -32,13 +32,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Set up virtual display
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xvfb
-          sh -e /etc/init.d/xvfb start
-          sleep 3
       
       - name: Run tests
         run: |
