--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-16.04
     
     strategy:
       matrix:
-        python-version: ["2.7.18"]
+        python-version: ["2.7"]
 
     env:
       DISPLAY: ":99.0"
 
     steps:
-      - name: Check out repository
+      - name: Check out the repository
         uses: actions/checkout@v3
         
       - name: Install pyenv
