--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: CPU Load Generator
-description: Generate a steady CPU load with a PI controller
-theme: jekyll-theme-minimal      # one of GitHub’s built‑in themes
+title: CPU Load Generator
+description: A simple CPU load generator for Linux systems.
+url: "https://gaetanocarlucci.github.io/CPULoadGenerator"
